29 April 2009: Wouter
	- Thanks to Brett Carr, caught windows resource leak, use 
	  closesocket() and not close() on sockets or else the network stack
	  starts to leak handles.
	- Removed usage of windows Mutex because windows cannot handle enough
	  mutexes open.  Provide own mutex implementation using primitives.

28 April 2009: Wouter
	- created svn tag for 1.3.0.

27 April 2009: Wouter
	- optimised cname from cache.
	- ifdef windows functions in testbound.

23 April 2009: Wouter
	- fix for threadsafety in solaris thr_key_create() in tests.
	- iana portlist updated.
	- fix pylib test for Darwin.
	- fix pymod test for Darwin and a python threading bug in pymod init.
	- check python >= 2.4 in configure.
	- -ldl check for libcrypto 1.0.0beta.

21 April 2009: Wouter
	- fix for build outside sourcedir.
	- fix for configure script swig detection.

17 April 2009: Wouter
	- Fix reentrant in minievent handler for unix. Could have resulted
	  in spurious event callbacks.
	- timers do not take up a fd slot for winsock handler.
	- faster fix for winsock reentrant check.
	- fix rsasha512 unit test for new (interim) algorithm number.
	- fix test:ldns doesn't like DOS line endings in keyfiles on unix.
	- fix compile warning on ubuntu (configlexer fwrite return value).
	- move python include directives into CPPFLAGS instead of CFLAGS.

16 April 2009: Wouter
	- winsock event handler exit very quickly on signal, even if
	  under heavy load.
	- iana portlist updated.
	- fixup windows winsock handler reentrant problem.

14 April 2009: Wouter
	- bug #245: fix munin plugin, perform cleanup of stale lockfiles.
	- makedist.sh; better help text.
	- cache-min-ttl option and tests.
	- mingw detect error condition on TCP sockets (NOTCONN).

9 April 2009: Wouter
	- Fix for removal of RSASHA256_NSEC3 protonumber from ldns.
	- ldns tarball updated.
	- iana portlist update.
	- detect GOST support in openssl-1.0.0-beta1, and fix compile problem